task Chrome extension

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -8,16 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- <style type="text/css">
+  <style type="text/css">
     body {
-      min-width: 640px;
-      max-width: 100%;
-      min-height: 640px;
-      max-height: 100%;
-      position: relative;
-      vertical-align:middle;
+      min-width: 330px;
+      min-height: 350px;
     }
-  </style> -->
+  </style>
 </head>
 <body>
   <app-root></app-root>
